--- a/Stylecaesar.css
+++ b/Stylecaesar.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background: -webkit-linear-gradient(bottom,#0B9AD4,#A9D6F6);
+  background: -webkit-linear-gradient(bottom,#0B6DFF,#48F06D);
   background-repeat: no-repeat;
 }
 
