--- a/styleindex.css
+++ b/styleindex.css
@@ -1,5 +1,4 @@
 @media (max-width:600px){
-a{text-decoration:none;}
   #fotoprofil{
     height:250px;
   }
@@ -321,8 +320,7 @@ a{text-decoration:none;}
 }
 
 @media(min-width:601px){
-a{text-decoration:none;
-    font-size:25px;}
+menu{font-size:25px;}
   #fotoprofil{
     height:400px;}
   .container {
