--- a/styleindex.css
+++ b/styleindex.css
@@ -319,8 +319,8 @@
 }
 }
 
-@media(min-width:601px){
-menu{font-size:45px;}
+@media (min-width:601px){
+.menu{font-size:45px;}
   #fotoprofil{
     height:400px;}
   .container {
