--- a/styleindex.css
+++ b/styleindex.css
@@ -320,11 +320,10 @@
 }
 
 @media (min-width:601px){
-.menu{font-size:45px;}
+#menu{font-size:45px;}
   #fotoprofil{
     height:400px;}
   .container {
-    border: 10px solid #efefef;
     position: relative;
     overflow: hidden;
     background: #efefef;
@@ -379,7 +378,7 @@
     float: right;
   }
   
-  .malasngoding-slider:after {
+  .container:after {
     font-size: 150px;
     position: absolute;
     z-index: 12;
@@ -391,7 +390,7 @@
     transition: 1s all ease-in-out;
   }
   
-  .malasngoding-slider:hover:after {
+  .container:hover:after {
     color: rgba(255, 255, 255, 0.6);
   }
   
