--- a/styleindex.css
+++ b/styleindex.css
@@ -3,8 +3,12 @@ a{
  color:#D49513;
  padding:5px; 
 }
-h2{
+.h2{
  color:#D49513;
+ text-align:center;
+ font-weight:bold;
+ font-style:italic;
+ 
 }
 #navbar{
   padding:10px;
