--- a/styleindex.css
+++ b/styleindex.css
@@ -3,6 +3,10 @@ a{
  color:#D49513;
  padding:5px; 
 }
+#fotoprofil{
+ border-color:#178BFD;
+ border-style:solid;
+}
 h2{
  color:#D49513;
  text-align:center;
