--- a/styleindex.css
+++ b/styleindex.css
@@ -1,3 +1,9 @@
+h1{
+  font-family: 'Bebas Neue', cursive;
+}
+.image{
+  height: 115px;
+}   
 a{
  font-family: 'Oxanium', cursive;  
  color:#D49513;
