--- a/Guess_number_game.css
+++ b/Guess_number_game.css
@@ -1,6 +1,7 @@
 body{
   margin:0;
   background: -webkit-linear-gradient(bottom,#1C68E2,#46BBF4)
+  background-repeat:no-repeat;
 }
 .judul_game{
   font-family: 'Girassol', cursive;
