--- a/Style-math-menu.css
+++ b/Style-math-menu.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background:#14141312;
+  background:white;
 }
 
 #heading {
@@ -26,7 +26,7 @@ body {
   width: 300px;
   height: 450px;
   text-align: center;
-  padding: 5px;
+  padding: 10px;
   margin: 6rem auto 8.1rem auto;
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
 }
