--- a/Style-math-menu.css
+++ b/Style-math-menu.css
@@ -20,23 +20,34 @@ body {
   text-align: center;
 }
 
-.kartu {
-  background: #FFFFFF;
-  border-radius: 8px;
-  width: 300px;
-  height: 450px;
-  text-align: center;
-  padding: 10px;
-  margin: 6rem auto 8.1rem auto;
-  box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
-}
-
 #Calculus {
   font-family: 'Coda';
   font-size: 28px;
+  padding:20px;
 }
 
 a {
   text-decoration: none;
   font-family: 'Gruppo';
 }
+#breadcrumb{
+  font-weight:bold;
+}
+ .kartu {
+   background: #FFFFFF;
+   border-radius: 8px;
+   width: 320px;
+   height: 450px;
+   text-align: center;
+   margin: 6rem auto 8.1rem auto;
+   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+ }
+
+ th {
+   width: 120px;
+   text-align: center;
+ }
+
+ table {
+   width: 320px;
+ }
