--- a/Style-javascriptproject-menu.css
+++ b/Style-javascriptproject-menu.css
@@ -31,7 +31,7 @@ body {
   box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
 }
 
-#IntroToCS {
+#ProjectWithoutAi {
   font-family: 'Coda', cursive;
   padding:20px;
 }
