--- a/styleindex.css
+++ b/styleindex.css
@@ -1,3 +1,20 @@
+.LatestUpdate{
+  max-height: 500px;
+  display:flex;
+  overflow-x: auto;
+  background: #D9DEE3;
+  
+}
+.LatestUpdate .item{
+  margin:10px;
+}
+.update{
+  padding:8px;
+  border:2px solid;
+  border-color:#65AAE8;
+  border-radius:4px;
+}
+
 h1{
   font-family: 'Bebas Neue', cursive;
 }
@@ -13,11 +30,11 @@ a{
  border-color:#178BFD;
  border-style:solid;
 }
-h2{
- color:#D49513;
+.title{
+ color:black;
  text-align:center;
  font-weight:bold;
- font-style:italic;
+ font-family: 'Coda', cursive;
  font-size:32px;
  
 }
