--- a/styleindex.css
+++ b/styleindex.css
@@ -136,8 +136,10 @@ h4{
   max-height: 500px;
   display:flex;
   overflow-x: auto;
+  background: #D9DEE3;  
+}
+. backgroundForUpdate{
   background: #D9DEE3;
-  
 }
 .LatestUpdate .item{
   margin:10px;
