--- a/styleindex.css
+++ b/styleindex.css
@@ -172,6 +172,9 @@ a{
  font-weight:bold;
  font-family: 'Coda', cursive;
  font-size:32px;
+ padding:15px;
+ background: #D9DEE3;  
+ 
  
 }
 #navbar{
