--- a/styleindex.css
+++ b/styleindex.css
@@ -173,10 +173,18 @@ a{
  font-family: 'Coda', cursive;
  font-size:32px;
  padding:15px;
+}
+.titleUpdate{
+ color:black;
+ text-align:center;
+ font-weight:bold;
+ font-family: 'Coda', cursive;
+ font-size:32px;
+ padding:15px;
  background: #D9DEE3;  
  
  
-}
+}  
 #navbar{
   padding:10px;
 }
