--- a/styleindex.css
+++ b/styleindex.css
@@ -18,6 +18,10 @@ h4{
 
 
 @media (max-width:599px) {
+  #slide{
+  height:320px;
+  width:auto;
+  }
   .programmingJourney{
   font-size:2.5em;
   }
