--- a/Weather_app.css
+++ b/Weather_app.css
@@ -36,7 +36,7 @@
     border-radius: 8px;
     width: 329px;
     padding: 15px;
-    opacity: 0.95;
+    opacity: 0.9;
     color:white;
     margin: 6rem auto 8.1rem auto;
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
@@ -85,10 +85,11 @@
     height: 44px;
     width: 44px;
     outline: none;
-    background: #7c7c7c2b;
+    background: -webkit-linear-gradient(left,#2E3192,#1BFFFF,#2E3192);
     color: white;
+    background-size:100px;
     cursor: pointer;
-    transition: 0.2s ease-in-out;
+    transition: 0.8s 
   }
   input.masukan {
     margin:0.5em;
@@ -105,10 +106,10 @@
   }
 
   button:hover {
-    background: #B4B4B4;
+    background-position:right;
   }
   input.masukan:hover {
-    background: #B4B4B4;
+    background: #717171;
   }
   img .gambar {
     opacity: 100%;
@@ -173,10 +174,11 @@
     height: 44px;
     width: 44px;
     outline: none;
-    background: #7c7c7c2b;
+    background: -webkit-linear-gradient(left,#2E3192,#1BFFFF,#2E3192);
     color: white;
     cursor: pointer;
-    transition: 0.2s ease-in-out;
+    backgroun-size:100px;
+    transition: 0.8s;
   }
   input.masukan {
     margin:0.5em;
@@ -193,10 +195,10 @@
   }
 
   button:hover {
-    background: #B4B4B4;
+    background-position:right;
   }
   input.masukan:hover {
-    background: #B4B4B4;
+    background: #717171;
   }
   img .gambar {
     opacity: 100%;
