--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@
 nav{
   box-shadow: 0px 7px 5px #909090;
 }
+.carousel-item{
+  height: 250px;
+}
+
 .footer{
   background:#4E5054;
   display: flex;
@@ -88,15 +92,11 @@ h4{
     left: 27px;
   }
   .carousel-item {
-    height: auto;
+    height: 275px;
   }
-  .cover{
-    position: absolute;
-    color:white;
-    left:15px;
-    bottom:33px;
+  .carbtn{
+    display: none;
   }
- 
   .copyright {
     text-align: center;
     color: white;
@@ -121,28 +121,8 @@ h4{
     border: 3px solid #FFAC00;
   }
   
-  /*.time:before {
-    content: "";
-    display: block;
-    width: 27px;
-    height: 27px;
-    background-color: #FFAC00;
-    border-radius: 50%;
-    border: 4px solid #FFFFFF;
-    position: absolute;
-    left: 460px;
-  }
   
-  h4:before {
-    content: "";
-    width: 0px;
-    height: 0px;
-    border-style: solid;
-    border-color: transparent #FFAC00 transparent transparent;
-    border-width: 13px;
-    position: absolute;
-    left: 27px;
-  }*/
+
   .timeline:before{
     content:"";
     position:absolute;
@@ -155,7 +135,7 @@ h4{
   
    .time:nth-child(odd) {
      position: relative;
-     left:270px;
+     left:560px;
    }
   .timeline .time:nth-child(even):before{
     content: "";
@@ -181,14 +161,6 @@ h4{
   }
   .carousel-item{
     height: 32rem;
-  }
-  .cover{
-    position: absolute;
-    color:white;
-    left: 70px;
-    bottom:50px;
-    position: center;
-    font-size: 2em
   }
   .copyright {
     text-align: center;
@@ -250,7 +222,6 @@ a{
  font-family: 'Coda', cursive;
  font-size:32px;
  padding:15px;
- /*background: #D9DEE3;*/
  background:#FFAC00;
  
  
@@ -273,3 +244,23 @@ body {
     height: 400px;
   }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
