--- a/Contact-me.css
+++ b/Contact-me.css
@@ -33,6 +33,12 @@ label{
   font-family: 'Oxanium', cursive;
   font-size: 1.5em;
 }
+.footer{
+  background:#4E5054;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+}
 @media (max-width:599px) {
   .kartu {
     background-color: #FFFFFF;
@@ -40,11 +46,16 @@ label{
     width:325px;
     height: auto;
     position: relative;
-    top:80px;
+    top:-90px;
     padding:15px;
     text-align: center;
     margin: 6rem auto 8.1rem auto;
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+  }
+  .copyright {
+    text-align: center;
+    color: white;
+    padding: 50px;
   }
 }
 @media (min-width:600px) {
@@ -59,5 +70,10 @@ label{
     text-align: center;
     margin: 6rem auto 8.1rem auto;
     box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.65);
+  }
+  .copyright {
+    text-align: center;
+    margin-left: 150px;
+    color: white;
   }
 }
