--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .keterangan {
-  padding-left: 25px;
-  padding-right: 25px;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 .ikon {
   display: flex;
