--- a/index.css
+++ b/index.css
@@ -1,6 +1,9 @@
 .capt {
-  margin-left: 25px;
-  margin-right: 25px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.keterangan {
+  text-indent: 30px;
 }
 .ikon {
   display: flex;
