--- a/index.css
+++ b/index.css
@@ -1,11 +1,12 @@
 .capt {
   margin-left: 20px;
   margin-right: 20px;
-  width : 100px;
+  text-align:center;
   
 }
 .keterangan {
   text-indent: 30px;
+  margin:auto;
 }
 .ikon {
   display: flex;
