--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 .capt {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
   text-align:center;
   width : 400px;
   
