--- a/eid-app/styles/home.css
+++ b/eid-app/styles/home.css
@@ -35,7 +35,7 @@ input {
 
 @media (min-width: 1024px) {
     body {
-        background-image: url("assets/home-background.jpg");
+        background-image: url("../assets/home-background.jpg");
         background-size: cover;
         height: 100vh;
     }
@@ -90,7 +90,7 @@ input {
 
 @media (max-width: 1024px) {
     body {
-        background-image: url("assets/home-background-phone-2.jpg");
+        background-image: url("../assets/home-background-phone-2.jpg");
         height: 100vh;
         background-repeat: no-repeat;
         background-size: cover;
