--- a/eid-app/styles/response.css
+++ b/eid-app/styles/response.css
@@ -42,7 +42,7 @@ input {
 
 @media (min-width: 1024px) {
     body {
-        background-image: url("/assets/home-background.jpg");
+        background-image: url("../assets/home-background.jpg");
         background-size: cover;
         height: 100vh;
     }
@@ -73,7 +73,7 @@ input {
 
 @media (max-width: 1024px) {
     body {
-        background-image: url("/assets/home-background-phone.jpg");
+        background-image: url("../assets/home-background-phone.jpg");
         height: 100vh;
         background-repeat: no-repeat;
         background-size: cover;
