--- a/eid-app/styles/response.css
+++ b/eid-app/styles/response.css
@@ -2,6 +2,7 @@
     --brown-first: #865b29;
     --brown-second:#694720;
     --white: rgb(201, 201, 201);
+    --gold: #edc420;
 }
 
 #heading {
@@ -69,6 +70,24 @@ input {
         font-size: 1.5em;
         text-align: center;
     }
+
+    #ad {
+        padding-top: 140px;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        font-family: "Lato", sans-serif;
+        font-weight: 500;
+        font-style: italic;
+        color: whitesmoke;
+        font-size: 0.8em;
+        text-align: center;
+    }
+    
+    a{
+        text-decoration: none;
+        color: var(--gold);
+    }
 }
 
 @media (max-width: 1024px) {
@@ -121,5 +140,23 @@ input {
         font-style: normal;
         font-size: 1.1em;
     }
-}
 
+    #ad {
+        padding-top: 170px;
+        width: 80%;
+        margin-left: auto;
+        margin-right: auto;
+        font-family: "Lato", sans-serif;
+        font-weight: 500;
+        font-style: italic;
+        color: whitesmoke;
+        font-size: 0.7em;
+        text-align: center;
+    }
+    
+    a{
+        text-decoration: none;
+        color: var(--brown-first);
+    }
+
+}
